0.11/_sources/user-guide/general/customizations/examples/plot_configure_check_conditions.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "user-guide/general/customizations/examples/plot_configure_check_conditions.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_user-guide_general_customizations_examples_plot_configure_check_conditions.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_user-guide_general_customizations_examples_plot_configure_check_conditions.py:


Configure Check Conditions
**************************

The following guide includes different options for configuring a check's condition(s):

* `Add Condition <#add-condition>`__
* `Remove / Edit a Condition <#remove-edit-a-condition>`__
* `Add a Custom Condition <#add-a-custom-condition>`__
* `Set Custom Condition Category <#set-custom-condition-category>`__

Add Condition
=============
In order to add a condition to an existing check, we can use any of the pre-defined
conditions for that check. The naming convention for the methods that add the
condition is ``add_condition_...``.

If you want to create and add your custom condition logic for parsing the check's
result value, see `Add a Custom Condition <#add-a-custom-condition>`__.

.. GENERATED FROM PYTHON SOURCE LINES 24-26

Add a condition to a new check
------------------------------

.. GENERATED FROM PYTHON SOURCE LINES 26-32

.. code-block:: default


    from deepchecks.tabular.checks import DatasetsSizeComparison

    check = DatasetsSizeComparison().add_condition_test_size_greater_or_equal(1000)
    check





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    DatasetsSizeComparison
    	Conditions:
    		0: Test dataset size is greater or equal to 1000



.. GENERATED FROM PYTHON SOURCE LINES 33-37

Conditions are used mainly in the context of a Suite, and displayed in the
Conditions Summary table. For example how to run in a suite you can look at
`Add a Custom Condition <#add-a-custom-condition>`__ or if you would like to
run the conditions outside of suite you can execute:

.. GENERATED FROM PYTHON SOURCE LINES 37-49

.. code-block:: default


    import pandas as pd

    from deepchecks.tabular import Dataset

    # Dummy data
    train_dataset = Dataset(pd.DataFrame(data={'x': [1,2,3,4,5,6,7,8,9]}))
    test_dataset = Dataset(pd.DataFrame(data={'x': [1,2,3]}))

    condition_results = check.conditions_decision(check.run(train_dataset, test_dataset))
    condition_results





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    [{'details': 'Test dataset contains 3 samples', 'category': <ConditionCategory.FAIL: 'FAIL'>, 'name': 'Test dataset size is greater or equal to 1000'}]



.. GENERATED FROM PYTHON SOURCE LINES 50-60

Add a condition to a check in a suite
-------------------------------------
If we want to add a conditon to a check within an existing suite, we should first
find the Check's ID within the suite, and then add the condition to it, by running
the relevant ``add_condition_`` method on that check's instance. See the next section
to understand how to do so.

The condition will then be appended to the list of conditions on that check (or be
the first one if no conditions are defined), and each condition will be evaluated
separately when running the suite.

.. GENERATED FROM PYTHON SOURCE LINES 62-70

Remove / Edit a Condition
=========================
Deepchecks provides different kinds of default suites, which come with pre-defined
conditions. You may want to remove a condition in case it isn't needed for you, or
you may want to change the condition's parameters (since conditions functions are immutable).

To remove a condition, start by printing the Suite and identifing the Check's ID,
and the Condition's ID:

.. GENERATED FROM PYTHON SOURCE LINES 70-76

.. code-block:: default


    from deepchecks.tabular.suites import train_test_validation

    suite = train_test_validation()
    suite





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Train Test Validation Suite: [
    	0: DatasetsSizeComparison
    		Conditions:
    			0: Test-Train size ratio is greater than 0.01
    	1: NewLabelTrainTest
    		Conditions:
    			0: Number of new label values is less or equal to 0
    	2: NewCategoryTrainTest
    		Conditions:
    			0: Ratio of samples with a new category is less or equal to 0%
    	3: StringMismatchComparison
    		Conditions:
    			0: No new variants allowed in test data
    	4: DateTrainTestLeakageDuplicates
    		Conditions:
    			0: Date leakage ratio is less or equal to 0%
    	5: DateTrainTestLeakageOverlap
    		Conditions:
    			0: Date leakage ratio is less or equal to 0%
    	6: IndexTrainTestLeakage
    		Conditions:
    			0: Ratio of leaking indices is less or equal to 0%
    	7: TrainTestSamplesMix
    		Conditions:
    			0: Percentage of test data samples that appear in train data is less or equal to 10%
    	8: FeatureLabelCorrelationChange(ppscore_params={}, random_state=42)
    		Conditions:
    			0: Train-Test features' Predictive Power Score difference is less than 0.2
    			1: Train features' Predictive Power Score is less than 0.7
    	9: TrainTestFeatureDrift
    		Conditions:
    			0: categorical drift score < 0.2 and numerical drift score < 0.1
    	10: TrainTestLabelDrift
    		Conditions:
    			0: categorical drift score < 0.2 and numerical drift score < 0.1 for label drift
    	11: MultivariateDrift
    		Conditions:
    			0: Drift value is less than 0.25
    ]



.. GENERATED FROM PYTHON SOURCE LINES 77-78

After we found the IDs we can remove the Condition:

.. GENERATED FROM PYTHON SOURCE LINES 78-86

.. code-block:: default


    # Access check by id
    check = suite[8]
    # Remove condition by id
    check.remove_condition(0)

    suite





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Train Test Validation Suite: [
    	0: DatasetsSizeComparison
    		Conditions:
    			0: Test-Train size ratio is greater than 0.01
    	1: NewLabelTrainTest
    		Conditions:
    			0: Number of new label values is less or equal to 0
    	2: NewCategoryTrainTest
    		Conditions:
    			0: Ratio of samples with a new category is less or equal to 0%
    	3: StringMismatchComparison
    		Conditions:
    			0: No new variants allowed in test data
    	4: DateTrainTestLeakageDuplicates
    		Conditions:
    			0: Date leakage ratio is less or equal to 0%
    	5: DateTrainTestLeakageOverlap
    		Conditions:
    			0: Date leakage ratio is less or equal to 0%
    	6: IndexTrainTestLeakage
    		Conditions:
    			0: Ratio of leaking indices is less or equal to 0%
    	7: TrainTestSamplesMix
    		Conditions:
    			0: Percentage of test data samples that appear in train data is less or equal to 10%
    	8: FeatureLabelCorrelationChange(ppscore_params={}, random_state=42)
    		Conditions:
    			1: Train features' Predictive Power Score is less than 0.7
    	9: TrainTestFeatureDrift
    		Conditions:
    			0: categorical drift score < 0.2 and numerical drift score < 0.1
    	10: TrainTestLabelDrift
    		Conditions:
    			0: categorical drift score < 0.2 and numerical drift score < 0.1 for label drift
    	11: MultivariateDrift
    		Conditions:
    			0: Drift value is less than 0.25
    ]



.. GENERATED FROM PYTHON SOURCE LINES 87-89

Now if we want we can also re-add the Condition using the built-in methods on the check,
with a different parameter.

.. GENERATED FROM PYTHON SOURCE LINES 89-95

.. code-block:: default


    # Re-add the condition with new parameter
    check.add_condition_feature_pps_difference_less_than(0.01)

    suite





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Train Test Validation Suite: [
    	0: DatasetsSizeComparison
    		Conditions:
    			0: Test-Train size ratio is greater than 0.01
    	1: NewLabelTrainTest
    		Conditions:
    			0: Number of new label values is less or equal to 0
    	2: NewCategoryTrainTest
    		Conditions:
    			0: Ratio of samples with a new category is less or equal to 0%
    	3: StringMismatchComparison
    		Conditions:
    			0: No new variants allowed in test data
    	4: DateTrainTestLeakageDuplicates
    		Conditions:
    			0: Date leakage ratio is less or equal to 0%
    	5: DateTrainTestLeakageOverlap
    		Conditions:
    			0: Date leakage ratio is less or equal to 0%
    	6: IndexTrainTestLeakage
    		Conditions:
    			0: Ratio of leaking indices is less or equal to 0%
    	7: TrainTestSamplesMix
    		Conditions:
    			0: Percentage of test data samples that appear in train data is less or equal to 10%
    	8: FeatureLabelCorrelationChange(ppscore_params={}, random_state=42)
    		Conditions:
    			1: Train features' Predictive Power Score is less than 0.7
    			2: Train-Test features' Predictive Power Score difference is less than 0.01
    	9: TrainTestFeatureDrift
    		Conditions:
    			0: categorical drift score < 0.2 and numerical drift score < 0.1
    	10: TrainTestLabelDrift
    		Conditions:
    			0: categorical drift score < 0.2 and numerical drift score < 0.1 for label drift
    	11: MultivariateDrift
    		Conditions:
    			0: Drift value is less than 0.25
    ]



.. GENERATED FROM PYTHON SOURCE LINES 96-102

Add a Custom Condition
======================
In order to write conditions we first have to know what value a given check produces.

Let's look at the check ``DatasetsSizeComparison`` and see it's return value in
order to write a condition for it.

.. GENERATED FROM PYTHON SOURCE LINES 102-115

.. code-block:: default


    import pandas as pd

    from deepchecks.tabular import Dataset
    from deepchecks.tabular.checks import DatasetsSizeComparison

    # We'll use dummy data for the purpose of this demonstration
    train_dataset = Dataset(pd.DataFrame(data={'x': [1,2,3,4,5,6,7,8,9]}))
    test_dataset = Dataset(pd.DataFrame(data={'x': [1,2,3]}))

    result = DatasetsSizeComparison().run(train_dataset, test_dataset)
    result.value





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    {'Train': 9, 'Test': 3}



.. GENERATED FROM PYTHON SOURCE LINES 116-126

Now we know what the return value looks like. Let's add a new condition that validates
that the ratio between the train and test datasets size is inside a given range. To
create condition we need to use the ``add_condition`` method of the check which accepts
a condition name and a function. This function receives the value of the ``CheckResult``
that we saw above and should return either a boolean or a ``ConditionResult`` containing
a boolean and optional extra info that will be displayed in the Conditions Summary table.

*Note: When implementing a condition in a custom check, you may want to add a method
``add_condition_x()`` to allow any consumer of your check to apply the condition
(possibly with given parameters). For examples look at implemented Checks' source code*

.. GENERATED FROM PYTHON SOURCE LINES 126-148

.. code-block:: default


    from deepchecks.core import ConditionResult

    # Our parameters for the condition
    low_threshold = 0.4
    high_threshold = 0.6

    # Create the condition function
    def custom_condition(value: dict, low=low_threshold, high=high_threshold): 
        ratio = value['Test'] / value['Train']
        if low <= ratio <= high:
            return ConditionResult(ConditionCategory.PASS)
        else:
            # Note: if you doesn't care about the extra info, you can return directly a boolean
            return ConditionResult(ConditionCategory.FAIL, f'Test-Train ratio is {ratio:.2}')

    # Create the condition name
    condition_name = f'Test-Train ratio is between {low_threshold} to {high_threshold}'

    # Create check instance with the condition 
    check = DatasetsSizeComparison().add_condition(condition_name, custom_condition)








.. GENERATED FROM PYTHON SOURCE LINES 149-152

Now we will use a Suite to demonstrate the action of the condition, since the suite
runs the condition for us automatically and prints out a Conditions Summary table
(for all the conditions defined on the checks within the suite):

.. GENERATED FROM PYTHON SOURCE LINES 152-162

.. code-block:: default


    from deepchecks.tabular import Suite

    # Using suite to run check & condition
    suite = Suite('Suite for Condition',
        check
    )

    suite.run(train_dataset, test_dataset)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Suite for Condition:
    |     | 0/1 [Time: 00:00]                                              

.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2023 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Suite for Condition</title>
        <link rel="icon" type="image/x-icon" href="https://deepchecks.com/wp-content/themes/deepchecks/assets/favicons/favicon.ico">
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
                background-color: white;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
    </head>
    <body>
        <script src="https://unpkg.com/@jupyter-widgets/html-manager@^0.20.1/dist/embed.js" crossorigin="anonymous"></script>
    

    <script type="application/vnd.jupyter.widget-state+json">
    {"version_major": 2, "version_minor": 0, "state": {"880f6f1ebcc04f1d944da4fa817eecbd": {"model_name": "AccordionModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "_titles": {"0": "Suite for Condition"}, "children": ["IPY_MODEL_ba62f50b34a148fa8a17dd5b601bd0de"], "layout": "IPY_MODEL_9ef3e30e20754ceca6d80c8ea2e47529"}}, "ba62f50b34a148fa8a17dd5b601bd0de": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_4508b6f7c72e475b80a65ade135ca2ed", "IPY_MODEL_2f377a518c844f8f934782f97a399806", "IPY_MODEL_ab388c591b234ee08f66cb048c1b5d88", "IPY_MODEL_ec7e9cd0f24f4834b1396eab623244c5", "IPY_MODEL_08e986d164e8402f9b6629e719910955"], "layout": "IPY_MODEL_de174572da524665853f67374fc5719b"}}, "4508b6f7c72e475b80a65ade135ca2ed": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_194a7d9f9ca54a63b737294daed26edc", "style": "IPY_MODEL_4b77271740e048fda50e41b82e44bc05", "value": "\n<h1 id=\"summary_MX2X18HAFEYUHZ1GV0E38DALY\">Suite for Condition</h1>\n<p>\n    The suite is composed of the following checks: Datasets Size Comparison.<br>\n    Each check may contain conditions (which will result in pass <span style=\"color: green;display:inline-block\">\u2713</span> /\n    fail <span style=\"color: red;display:inline-block\">\u2716</span> / warning <span style=\"color: orange;font-weight:bold;display:inline-block\">!</span> / error <span style=\"color: firebrick;font-weight:bold;display:inline-block\">\u2048</span>) as well as\n    other outputs such as plots or tables.<br>\n    Suites, checks and conditions can all be modified. Read more about\n    <a href=https://docs.deepchecks.com/en/stable/examples/guides/create_a_custom_suite.html?utm_source=display_output&utm_medium=referral&utm_campaign=suite_link target=\"_blank\">custom suites</a>.\n</p>\n\n"}}, "194a7d9f9ca54a63b737294daed26edc": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "4b77271740e048fda50e41b82e44bc05": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "2f377a518c844f8f934782f97a399806": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_6ffa48f2fb764412b122c4a0199f7093", "IPY_MODEL_3e1a224f55ba4b3c954c09366f963e7a"], "layout": "IPY_MODEL_2aa195cf8d0c4a8682583a31f07e4a57"}}, "6ffa48f2fb764412b122c4a0199f7093": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_7d8f153a25ad44b3844488e06a3ba560", "style": "IPY_MODEL_793c79df9f014241bbb0eb88e8a709f8", "value": "<span id=\"summary_MX2X18HAFEYUHZ1GV0E38DALY-section-8OZCY\"></span>"}}, "7d8f153a25ad44b3844488e06a3ba560": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "793c79df9f014241bbb0eb88e8a709f8": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "3e1a224f55ba4b3c954c09366f963e7a": {"model_name": "AccordionModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "_titles": {"0": "Didn't Pass"}, "children": ["IPY_MODEL_2462558b348d417da1e02c0c11eae455"], "layout": "IPY_MODEL_637a53c25c9a4ebd810b6bd50f7577d3", "selected_index": null}}, "2462558b348d417da1e02c0c11eae455": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_6913cf4a63bb45c7aa60281c8a7a70d7", "IPY_MODEL_410eb76cb461452b9a1713e050518aae", "IPY_MODEL_5033a10ec3b546c09e33f736faee42ea"], "layout": "IPY_MODEL_8070d2652f0b48fb82df05ede2e6da44"}}, "6913cf4a63bb45c7aa60281c8a7a70d7": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_b5c302ca23e945c689a3c957977d0821", "style": "IPY_MODEL_d19db1d0707c4c1c8934a2299cb30bc5", "value": "<style type=\"text/css\">\n#T_b43a4_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_b43a4_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_b43a4_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_b43a4_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_b43a4_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_b43a4_\">\n  <thead>\n    <tr>\n      <th class=\"col_heading level0 col0\" >Status</th>\n      <th class=\"col_heading level0 col1\" >Check</th>\n      <th class=\"col_heading level0 col2\" >Condition</th>\n      <th class=\"col_heading level0 col3\" >More Info</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_b43a4_row0_col0\" class=\"data row0 col0\" ><div style=\"color: firebrick;text-align: center;font-weight:bold\">\u2048</div></td>\n      <td id=\"T_b43a4_row0_col1\" class=\"data row0 col1\" ><a href=\"#DatasetsSizeComparison_MX2X18HAFEYUHZ1GV0E38DALY-section-8OZCY\">Datasets Size Comparison</a></td>\n      <td id=\"T_b43a4_row0_col2\" class=\"data row0 col2\" >Test-Train ratio is between 0.4 to 0.6</td>\n      <td id=\"T_b43a4_row0_col3\" class=\"data row0 col3\" >Exception in condition: NameError: name 'ConditionCategory' is not defined</td>\n    </tr>\n  </tbody>\n</table>\n"}}, "b5c302ca23e945c689a3c957977d0821": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "d19db1d0707c4c1c8934a2299cb30bc5": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "410eb76cb461452b9a1713e050518aae": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_29eb6f4862094d9a94e32b0b2ab4e811", "style": "IPY_MODEL_eaf2202f36634e9da3ed99c521b858d5", "value": "<hr style=\"background-color: #eee;border: 0 none;color: #eee;height: 4px;\">"}}, "29eb6f4862094d9a94e32b0b2ab4e811": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "eaf2202f36634e9da3ed99c521b858d5": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "5033a10ec3b546c09e33f736faee42ea": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "children": ["IPY_MODEL_94c5723e23cc426ea7d5a70fbcee0ad4", "IPY_MODEL_eaf6a9ef770742b1971fc0829643ed05", "IPY_MODEL_d6d04c1a1de3487f872843ffd60c242a", "IPY_MODEL_e631d742f9f54e0dbc70c905376a7414"], "layout": "IPY_MODEL_c8b0532ece4a403289af1f430a80a404"}}, "94c5723e23cc426ea7d5a70fbcee0ad4": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_6b3dd07cd7394397b54bc8d90f55ecef", "style": "IPY_MODEL_b142e32127544b6aa6331223d084fc96", "value": "<h4 id=\"DatasetsSizeComparison_MX2X18HAFEYUHZ1GV0E38DALY-section-8OZCY\"><b>Datasets Size Comparison</b></h4>"}}, "6b3dd07cd7394397b54bc8d90f55ecef": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "b142e32127544b6aa6331223d084fc96": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "eaf6a9ef770742b1971fc0829643ed05": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_b79d9fbc8b51493fa3b42ed7da765dd8", "style": "IPY_MODEL_0fd57904ca684932ab79365f0e8643ce", "value": "<p>Verify test dataset size comparing it to the train dataset size. <a href=\"https://docs.deepchecks.com/0.11/checks_gallery/tabular/train_test_validation/plot_datasets_size_comparison.html?utm_source=display_output&utm_medium=referral&utm_campaign=check_link\" target=\"_blank\">Read More...</a></p>"}}, "b79d9fbc8b51493fa3b42ed7da765dd8": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "0fd57904ca684932ab79365f0e8643ce": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "d6d04c1a1de3487f872843ffd60c242a": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_d31ac98f32f244aba4ad21bddc2118c4", "style": "IPY_MODEL_ac2f9ec0d2374faca9d54cf096ac17e7", "value": "<h5><b>Conditions Summary</b></h5><style type=\"text/css\">\n#T_0e988_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_0e988_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_0e988_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_0e988_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_0e988_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_0e988_\">\n  <thead>\n    <tr>\n      <th class=\"col_heading level0 col0\" >Status</th>\n      <th class=\"col_heading level0 col1\" >Condition</th>\n      <th class=\"col_heading level0 col2\" >More Info</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_0e988_row0_col0\" class=\"data row0 col0\" ><div style=\"color: firebrick;text-align: center;font-weight:bold\">\u2048</div></td>\n      <td id=\"T_0e988_row0_col1\" class=\"data row0 col1\" >Test-Train ratio is between 0.4 to 0.6</td>\n      <td id=\"T_0e988_row0_col2\" class=\"data row0 col2\" >Exception in condition: NameError: name 'ConditionCategory' is not defined</td>\n    </tr>\n  </tbody>\n</table>\n"}}, "d31ac98f32f244aba4ad21bddc2118c4": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "ac2f9ec0d2374faca9d54cf096ac17e7": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "e631d742f9f54e0dbc70c905376a7414": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_ecc5be4778714641a661441ef0628ede", "IPY_MODEL_6a01210136474e5392becaea7c7bc565", "IPY_MODEL_324518eca84b4735944012ff4846cc99"], "layout": "IPY_MODEL_c026647f627f4d79a5ad5c6d4fd899ca"}}, "ecc5be4778714641a661441ef0628ede": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_239028d1f5ef4d2593e0525ea56721dd", "style": "IPY_MODEL_d2dcf4293524416782c7445d767ecf9c", "value": "<h5><b>Additional Outputs</b></h5>"}}, "239028d1f5ef4d2593e0525ea56721dd": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "d2dcf4293524416782c7445d767ecf9c": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "6a01210136474e5392becaea7c7bc565": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_afd14092e09b47078d35ffe721dcf7f9", "style": "IPY_MODEL_491e4cdd7631415db7261284d5e80cfb", "value": "<style type=\"text/css\">\n#T_1ccf1_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_1ccf1_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_1ccf1_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_1ccf1_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_1ccf1_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_1ccf1_\">\n  <thead>\n    <tr>\n      <th class=\"blank level0\" >&nbsp;</th>\n      <th class=\"col_heading level0 col0\" >Train</th>\n      <th class=\"col_heading level0 col1\" >Test</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th id=\"T_1ccf1_level0_row0\" class=\"row_heading level0 row0\" >Size</th>\n      <td id=\"T_1ccf1_row0_col0\" class=\"data row0 col0\" >9</td>\n      <td id=\"T_1ccf1_row0_col1\" class=\"data row0 col1\" >3</td>\n    </tr>\n  </tbody>\n</table>\n"}}, "afd14092e09b47078d35ffe721dcf7f9": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "491e4cdd7631415db7261284d5e80cfb": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "324518eca84b4735944012ff4846cc99": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_6890160d9174453db1e24870bbef8a36", "style": "IPY_MODEL_891819354c3249a8ac587ef244fedb91", "value": "<br><a href=\"#summary_MX2X18HAFEYUHZ1GV0E38DALY-section-8OZCY\" style=\"font-size: 14px;\">Go to top</a>"}}, "6890160d9174453db1e24870bbef8a36": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "891819354c3249a8ac587ef244fedb91": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "c026647f627f4d79a5ad5c6d4fd899ca": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "c8b0532ece4a403289af1f430a80a404": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "8070d2652f0b48fb82df05ede2e6da44": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "637a53c25c9a4ebd810b6bd50f7577d3": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "2aa195cf8d0c4a8682583a31f07e4a57": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "ab388c591b234ee08f66cb048c1b5d88": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_f8af942d2ff14a26882770ccb9fc5e53", "IPY_MODEL_64f513bed5c542e29946175c06fcd60d"], "layout": "IPY_MODEL_9c1df1ba0aff49c79e807f73a494cfb0"}}, "f8af942d2ff14a26882770ccb9fc5e53": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_ffff36eb986441a296d7f58ef5be7b2b", "style": "IPY_MODEL_1233a606ce4a49bcadd96897f0bffe50"}}, "ffff36eb986441a296d7f58ef5be7b2b": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "1233a606ce4a49bcadd96897f0bffe50": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "64f513bed5c542e29946175c06fcd60d": {"model_name": "AccordionModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "_titles": {"0": "Passed"}, "children": ["IPY_MODEL_260c8d2a54c144ef970887838a33c4e9"], "layout": "IPY_MODEL_f86a5303a11d4d76a7455cb1e56ddb14", "selected_index": null}}, "260c8d2a54c144ef970887838a33c4e9": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_fc7c7fffcaac4fed91e9ebff1626299c", "style": "IPY_MODEL_1859b9aa0c324b819d73afbaf013bee4", "value": "<p>No outputs to show.</p>"}}, "fc7c7fffcaac4fed91e9ebff1626299c": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "1859b9aa0c324b819d73afbaf013bee4": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "f86a5303a11d4d76a7455cb1e56ddb14": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "9c1df1ba0aff49c79e807f73a494cfb0": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "ec7e9cd0f24f4834b1396eab623244c5": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_75eccb50c84f431dbc585a65a4282ee0", "IPY_MODEL_8f6f2e2e0840498e846b1c2c40d6fd18"], "layout": "IPY_MODEL_c8b3978513cf4596bee70f10a8660335"}}, "75eccb50c84f431dbc585a65a4282ee0": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_cdb2ba7c3fde4e24922036f72099b644", "style": "IPY_MODEL_5f7923be123d4f3398f6981e6180e325"}}, "cdb2ba7c3fde4e24922036f72099b644": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "5f7923be123d4f3398f6981e6180e325": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "8f6f2e2e0840498e846b1c2c40d6fd18": {"model_name": "AccordionModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "_titles": {"0": "Other"}, "children": ["IPY_MODEL_43ce107783744df3bb04ff8c44e545e5"], "layout": "IPY_MODEL_0b3509e572c847078ec613f4f1ef6bec", "selected_index": null}}, "43ce107783744df3bb04ff8c44e545e5": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_0aa241bc0cad444fa44f1bfa8a845c10", "style": "IPY_MODEL_30bd8ddaf82f45298df1c623492ed2e2", "value": "<p>No outputs to show.</p>"}}, "0aa241bc0cad444fa44f1bfa8a845c10": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "30bd8ddaf82f45298df1c623492ed2e2": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "0b3509e572c847078ec613f4f1ef6bec": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "c8b3978513cf4596bee70f10a8660335": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "08e986d164e8402f9b6629e719910955": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_49d87efa74874273b973cef167760d0f", "IPY_MODEL_32bda27d74ef4f9c950dfaebc5966496"], "layout": "IPY_MODEL_45af0285fbc344aeb15c389530986134"}}, "49d87efa74874273b973cef167760d0f": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_41646fca1f274ed6948f4d8eeef6aebf", "style": "IPY_MODEL_f0079ac70729408093ea5ec1f27c0e36"}}, "41646fca1f274ed6948f4d8eeef6aebf": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "f0079ac70729408093ea5ec1f27c0e36": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "32bda27d74ef4f9c950dfaebc5966496": {"model_name": "AccordionModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "_titles": {"0": "Didn't Run"}, "children": ["IPY_MODEL_435ada376bc748fdb9da9adc4c193118"], "layout": "IPY_MODEL_369c454856284e73901e2ff5ac8dede9", "selected_index": null}}, "435ada376bc748fdb9da9adc4c193118": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_2ac818579de24fff8d980d8e6f8fccc3", "style": "IPY_MODEL_bc34699d33d24e0b8e26b83d5c375542", "value": "<p>No outputs to show.</p>"}}, "2ac818579de24fff8d980d8e6f8fccc3": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "bc34699d33d24e0b8e26b83d5c375542": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "369c454856284e73901e2ff5ac8dede9": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "45af0285fbc344aeb15c389530986134": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "de174572da524665853f67374fc5719b": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "9ef3e30e20754ceca6d80c8ea2e47529": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}}}
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "880f6f1ebcc04f1d944da4fa817eecbd"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 163-168

Set Custom Condition Category
=============================
When writing your own condition logic, you can decide to mark a condition result
as either fail or warn, by passing the category to the ConditionResult object.
For example we can even write condition which sets the category based on severity of the result:

.. GENERATED FROM PYTHON SOURCE LINES 168-184

.. code-block:: default


    from deepchecks.core import ConditionCategory, ConditionResult

    # Our parameters for the condition
    low_threshold = 0.3
    high_threshold = 0.7

    # Create the condition function for check `DatasetsSizeComparison`
    def custom_condition(value: dict): 
        ratio = value['Test'] / value['Train']
        if low_threshold <= ratio <= high_threshold:
            return ConditionResult(ConditionCategory.PASS)
        elif ratio < low_threshold:
            return ConditionResult(ConditionCategory.FAIL, f'Test-Train ratio is {ratio:.2}', ConditionCategory.FAIL)
        else:
            return ConditionResult(ConditionCategory.FAIL, f'Test-Train ratio is {ratio:.2}', ConditionCategory.WARN)








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.065 seconds)


.. _sphx_glr_download_user-guide_general_customizations_examples_plot_configure_check_conditions.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_configure_check_conditions.py <plot_configure_check_conditions.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_configure_check_conditions.ipynb <plot_configure_check_conditions.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
